# mandelbrot-set-viz

./: CMakeLists.txt  README.md  fragment_shader.frag  fragment_shader_d.frag  vertex_shader.vert  vertex_shader_d.vert
headers/: event_manager.hpp  utils.hpp
src/: main.cpp  main_opengl.cpp  main_opengl_d.cpp
